--- a/TLW/my-app/src/App.css
+++ b/TLW/my-app/src/App.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,300;1,400&display=swap');
 .body{
-  background-color: white;
+  background-color: var(--bgColor);
 }
 
 *{
@@ -73,22 +73,24 @@ body{
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--bgColor);
+  background: var(--bodyBgColor);
   overflow: hidden;
   border-radius: 1rem;
   box-shadow: 2px 3px 8px gray;
 }
 
 :root{
-  --PrimaryColor: orange
+  --PrimaryColor: #4F200D;
   --HoverColor: #F4A460;
   --orange: #FF7F00;
   --white-color: white;
   --black-color: black;
   --inputColor:hsl(330,12%,97%);
   --textColor:hsl(240, 1%,48%);
-  --bgColor:hsl(220, 10%,94%);
+  --bgColor:#FFF9B0;
   --greyText: rgb(190,190,190);
+  --titleText: #CF0A0A;
+  --bodyBgColor: #FFD384;
 
   --biggest-font-size: 2.5rem;
   --h1FontSize: 1.5rem;
@@ -97,4 +99,12 @@ body{
   --normalFontSize: .938rem;
   --smallFontSize: .813rem;
   --smallestFontSize: .75rem;
+}
+
+.noneColorLink{
+  color: var(--black-color);
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
