--- a/TLW/my-app/src/Components/HomePage/SideBar/SideBar.scss
+++ b/TLW/my-app/src/Components/HomePage/SideBar/SideBar.scss
@@ -1,13 +1,14 @@
 :root{
-    --PrimaryColor: orange;
-    --HoverColor: #F4A460;
+    --PrimaryColor: #4F200D;
+    --HoverColor: #4F200D;
     --orange: #FF7F00;
     --white-color: white;
     --black-color: black;
     --inputColor:hsl(330,12%,97%);
     --textColor:hsl(240, 1%,48%);
-    --bgColor:hsl(220, 10%,94%);
+    --bgColor:#FFF9B0;
     --greyText: rgb(190,190,190);
+    --titleText: #CF0A0A;
   
     --biggest-font-size: 2.5rem;
     --h1FontSize: 1.5rem;
@@ -18,10 +19,75 @@
     --smallestFontSize: .75rem;
   }
 .sideBar{
-    background-color: orange;
+    background-color:var(--bgColor);
     box-shadow: 1px 0px 4px var(--greyText);
-    max-width: 18%;
+    width: 20%;
     height: 100%;
     gap: 3rem;
-    
+    overflow: auto;
+
+    .logo{
+        display:grid;
+        padding: 1.5rem 1.5rem 0;
+        cursor: pointer;
+        padding-left: 2rem;
+
+        display: flex; /* Chuyển sang flex container */
+        flex-direction: column; /* Sắp xếp các phần tử theo cột */
+        align-items: center; /* Căn giữa các phần tử theo chiều ngang */
+        img{
+           width: 90%;
+           margin-right: .5rem;
+           background-color: #FFD384;
+           border-radius: 2px;
+           padding: .2rem;
+           box-shadow: 1px 0px 4px var(--greyText);
+           border-radius: 20px;
+          // align-items: center;
+        }
+    }
+}
+
+.Tag{
+  .Title{
+    font-size: var(--h3FontSize);
+    color: var(--titleText);
+    padding: 2rem 2rem 1rem;
+  }
+
+  .UserMenuList{
+    .ListItems{
+      padding: 1rem 1.5rem;
+      width: 100%;
+      position: relative;
+
+      &::before{
+        position: absolute;
+        content: '';
+        height: 0%;
+        left:0;
+        width: 5px;
+        bottom: 0;
+        border-top-right-radius: 10px;
+        border-bottom-right-radius: 10px;
+        background: var(--orange);
+      }
+
+      .tagLink{
+        color: var(--HoverColor);
+        font-weight: 500;
+        transition: 0;
+      }
+
+      &:hover .tagLink{
+        color: var(--orange);
+        transition: 0;
+      }
+
+      &:hover::before{
+        height: 80%;
+        transition: .3s ease;
+      }
+    }
+  }
 }
