--- a/TLW/my-app/src/Components/UserProfile/UserProfile.scss
+++ b/TLW/my-app/src/Components/UserProfile/UserProfile.scss
@@ -9,6 +9,7 @@
         gap: 2rem;
         align-items: flex-start;
         .BlockContent {
+            align-self: center;
             margin-top: 2rem;
             gap: 2rem;
             background-color: var(--bodyBgColor);
