--- a/TLW/my-app/src/Components/HomePage/Body/Activity/Activity.scss
+++ b/TLW/my-app/src/Components/HomePage/Body/Activity/Activity.scss
@@ -43,6 +43,12 @@
                 width: 200px;
                 height: 200px;
             }
+            a{
+                display: flex;
+                width: 100%;
+                height: 100%;
+                align-items: center;
+            }
 
             p{
                 padding-left: .2rem ;
