--- a/TLW/my-app/src/Components/UserProfile/ManageGame/ManageGame.scss
+++ b/TLW/my-app/src/Components/UserProfile/ManageGame/ManageGame.scss
@@ -4,7 +4,7 @@
     height: 100%;
     overflow: auto;
     justify-content: center;
-    border: 2px solid #000;
+    border: 2px solid #ff5959;
     background-color: var(--bgColor);
     border-radius: 20px;
     .profileTitle{
