--- a/TLW/my-app/src/Components/HomePage/Body/HomePage.scss
+++ b/TLW/my-app/src/Components/HomePage/Body/HomePage.scss
@@ -8,5 +8,10 @@
         margin-top: 2rem;
         gap: 2rem;
         align-items: flex-start;
+        background-color: var(--bodyBgColor);
+        .Title{
+            font-size: var(--h1FontSize);
+            color: var(--titleText);
+        }
     }
 }
